fix for split bars on android (right button wrapping..)

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -528,6 +528,9 @@ a:active {
   width: 20%;
   box-sizing: border-box;
   margin: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 .ui-bar .s-bar-right .ui-btn-inner {
   padding-right: 0;
