--- a/app/css/main.less
+++ b/app/css/main.less
@@ -587,6 +587,9 @@ a:active{
         width: 20%;
         box-sizing: border-box;
         margin: 0;
+        position: absolute;
+        right: 0;
+        top:0;
         .ui-btn-inner{
             padding-right: 0;
         }
